--- a/package.json
+++ b/package.json
@@ -1,32 +1,13 @@
 {
-  "name": "an-array-of-english-words",
+  "name": "an-array-of-portuguese-words",
   "version": "1.2.0",
-  "description": "An array of ~275,000 English words. Works in node and browsers.",
+  "description": "An array of ~180,000 Portuguese words. Works in node and browsers.",
   "main": "words.json",
   "bin": {
-    "words": "./cli.js",
-    "an-array-of-english-words": "./cli.js"
+    "palavra": "./cli.js",
+    "an-array-of-portuguese-words": "./cli.js"
   },
-  "repository": "https://github.com/zeke/an-array-of-english-words",
-  "author": "zeke",
-  "license": "MIT",
-  "scripts": {
-    "build": "node build.js > words.json",
-    "test": "npm run build && mocha && standard"
-  },
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "lodash": "^4.17.2",
-    "mocha": "^3.2.0",
-    "readlines": "^0.2.0",
-    "standard": "^8.6.0"
-  },
-  "engines": {
-    "node": ">=4"
-  },
-  "standard": {
-    "env": {
-      "mocha": true
-    }
-  }
+  "repository": "https://github.com/hexapode/an-array-of-portuguese-words",
+  "author": "hexapode",
+  "license": "MIT"
 }
